--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     font-size: 15px;
     background-color: #ffffff;
@@ -45,4 +45,4 @@ body {
     text-decoration: none solid rgb(32, 33, 36);
     text-wrap: nowrap;
     width: fit-content;
-}
+} */
